<?xml version="1.0"?>
<package>
  <name>mr_rqt</name>
  <version>0.2.3</version>
  <description>Multi-robot teleoperation package collection</description>
  <url>http://www.ros.org/wiki/mr_rqt</url>
  <maintainer email="igor@cogniteam.com">Igor Makhtes</maintainer>
  <author email="igor@cogniteam.com">Igor Makhtes</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
