<?xml version="1.0"?>
<package>
  <name>mr_teleoperator</name>
  <version>0.1.0</version>
  <description>Multi-robot teleoperation package collection</description>
  <url>http://www.ros.org/wiki/mr_teleoperator</url>
  <maintainer email="igor@cogniteam.com">Igor Makhtes</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>mr_tools</run_depend>
  <run_depend>mr_rqt</run_depend>

  <export>
  	<metapackage/>
  </export>
</package>
