<?xml version="1.0"?>
<package>
  <name>mr_tools</name>
  <version>0.2.5</version>
  <description>Some useful nodes for multi-robot teleoperation</description>
  <url>http://www.ros.org/wiki/mr_tools</url>
  <maintainer email="igor@cogniteam.com">Igor Makhtes</maintainer>
  <author email="igor@cogniteam.com">Igor Makhtes</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
